test/should-fail/jfxc1476A.fx
/*
 * @subtest
 */

class Another {
    public function f (d : Number) : Number { d }
}
